<resources>
    <string name="app_name">EHS&amp;S y Calidad</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="BotonGuardar">Guardar</string>
    <string name="BotonAgregar">Agregar Acción</string>
    <string name="capturar">Capturar</string>
    <string name="elegir">Elegir</string>
    <string name="Email">E-Mail</string>
    <string name="Contra">Password</string>
    <string name="Login">Login</string>
    <string name="error_invalid_email">E-mail inválido</string>
    <string name="error_invalid_password">Password demasiado corto</string>
    <string name="error_incorrect_password">E-mail o Password incorrecto</string>
    <string name="error_field_required">Dato Requerido</string>
    <string name="siguimiento">Seguimiento:</string>
    <string name="CondicionInsegura">Condición insegura: </string>
    <string name="Riesgo">Riesgo:</string>
    <string name="Accion">Acción:</string>
    <string name="Responsable">Responsable:</string>
    <string name="Vencimiento">Vencimiento: (*)</string>
    <string name="Sector">Sector:</string>
    <string name="SectorResp">Sector del responsable:</string>
    <string name="Site">Site:</string>
    <string name="Lugar">Lugar:</string>
    <string name="ResponsableTurno">Responsable de turno:</string>
    <string name="NombreOperario">Nombre del operario:</string>
    <string name="Personal">Personal involucrado: </string>
    <string name="Empresa">Empresa</string>
    <string name="PermanenteDiscontinuo">Permanente Discontinuo</string>
    <string name="Temporario">Temporario</string>
    <string name="Otro">Otro</string>
    <string name="FuncionOp">Función del Operario:</string>
    <string name="DescribirOcurrido">Describir claramente lo ocurrido:</string>
    <string name="Lesion">Tipo de Lesión:</string>
    <string name="ParteDelCuerpo">Parte del cuerpo afectada:</string>
    <string name="Potencial">Potencial:</string>
    <string name="Bienvenido">Bienvenido</string>
    <string name="Corteva">Corteva Agriscience</string>
    <string name="Si">Si</string>
    <string name="No">No</string>
    <string name="Seguro">Seguro</string>
    <string name="Inseguro">Inseguro</string>
    <string name="NA">N/A</string>
    <string name="Bien">Bien</string>
    <string name="Mal">Mal</string>
    <string name="Tema">Tema:</string>
    <string name="Comentario">Comentarios:</string>
    <string name="Sugerencias">Sugerencias de Mejora</string>
    <string name="Reporte">Reporte de Desvíos</string>
    <string name="UAC">Condiciones Inseguras: Nuevo</string>
    <string name="UACCierre">Condiciones Inseguras: Cerrar</string>
    <string name="Calidad">Calidad</string>
    <string name="STOP">BBP/STOP</string>
    <string name="Seguridad">Pausas de Seguridad</string>
    <string name="Adjuntar">Información usada</string>
    <string name="Topten">Top Ten</string>
    <string name="EPP">EPP:</string>
    <string name="EPPNecesarios">¿Se seleccionaron los EPP necesarios para la tarea? </string>
    <string name="EPPUso">¿Los EPP son usados correctamente? </string>
    <string name="EPPEstado">¿Los EPP están en buen estado de conservación?</string>
    <string name="CorePermit">Core Permit:</string>
    <string name="UsoMontacargas">Montacargas, Manipulador y Grúas:</string>
    <string name="Conductor">¿Conductor habilitado?</string>
    <string name="CheckList">¿Check list realizado?</string>
    <string name="Cinturon">¿Usa cinturón de seguridad?</string>
    <string name="Carga">¿La carga está estabilizada? </string>
    <string name="Velocidad">¿La velocidad es adecuada?</string>
    <string name="Bocina">¿Toca bocina al ingresar/salir de los galpones?</string>
    <string name="UsoVehiculos">Uso de Vehículos:</string>
    <string name="LucesEncendidas">¿Circula con luces encendidas?</string>
    <string name="Cinturon2">¿Usa cinturón de seguridad?</string>
    <string name="Velocidad2">¿Circula a la velocidad adecuada?</string>
    <string name="CantPasajeros">¿Cantidad de pasajeros acorde al vehículo?</string>
    <string name="PosicionesPersonas">Posiciones de las personas:</string>
    <string name="ubicacionOperador">¿La ubicación del operador es adecuada (no está en la línea de fuego)?</string>
    <string name="Posturas">¿Se adoptan posturas adecuadas?</string>
    <string name="HerramientasEquipos">Herramientas y equipos:</string>
    <string name="HerramientasAdecuadas">¿Se seleccionaron las herramientas adecuadas para la tarea? </string>
    <string name="UsoHerramientas">¿Las herramientas son usadas correctamente? </string>
    <string name="HerramientasEstado">¿Las herramientas se encuentran en buen estado de conservación? </string>
    <string name="RiesgosGenerales">Riesgos generales:</string>
    <string name="Proteccion">¿Están los dispositivos de protección en los equipos?</string>
    <string name="PTSrequeridos">¿Se usan los procedimientos o PTS requeridos?</string>
    <string name="AreaDeTrabajoLimpia">¿El área de trabajo está limpia y ordenada? </string>
    <string name="celular">¿Camina sin utilizar el celular?</string>
    <string name="sendaPeatonal">¿Utiliza los lugares destinados al tránsito de personas (sendas peatonales)? </string>
    <string name="escaleraPasamanos">¿Usa las escaleras tomado del pasamanos? </string>
    <string name="TrabajoAltura">Trabajo en Altura:</string>
    <string name="RiesgoCaida">¿Se contempló el riesgo de caída?</string>
    <string name="Area">¿El área está delimitada? </string>
    <string name="Escalera">¿Trabaja con escalera adecuada? </string>
    <string name="Andamio">¿El andamio está habilitado?</string>
    <string name="AislacionEnergia">Aislación de Fuentes de Energía (LOTO):</string>
    <string name="Candados">¿Se colocaron los candados y tarjetas identificatorias?</string>
    <string name="TodosLosEquipos">¿La aislación incluye todos los equipos involucrados?</string>
    <string name="PTS">¿La aislación se incluyó en el Core Permit?</string>
    <string name="corteFisico">¿Se realizó el corte físico (uno plus)?</string>
    <string name="EspaciosConfinados">Espacios confinados:</string>
    <string name="Confinado">¿Se realizó el permiso de ingreso a espacios confinados?</string>
    <string name="Interacciones">Interacciones/Acciones Ejecutadas:</string>
    <string name="Observaciones">Observaciones:</string>
    <string name="TipoEmpleado">Personal Observado:</string>
    <string name="Tarea">Tarea:</string>
    <string name="CantPersonas">Cantidad Personas Observadas:</string>
    <string name="ObservadorUno">Observador 1:</string>
    <string name="ObservadorDos">Observador 2:</string>
    <string name="MasterTarjetasRojas">Master Tarjetas Rojas:</string>
    <string name="CantTarj">1- Cantidad Tarjetas:</string>
    <string name="EquipoFuera">2- Equipo fuera de op.:</string>
    <string name="Razon">3- Razón entarj./alcance:</string>
    <string name="Tarea2">4- Tarea:</string>
    <string name="Dpto">5- Dpto/Emp.</string>
    <string name="Acepto">6- Acepto:</string>
    <string name="Apellido">7- Apellido:</string>
    <string name="Cancelacion">8- Cancelación:</string>
    <string name="RepDeLaInst">9- Rep. de la inst.que colocó tarjeta:</string>
    <string name="AislacionFisica">10- Aislación física(candado,precinto,etc.):</string>
    <string name="RepTrabajo">11- Rep. del trabajo que verificó:</string>
    <string name="TarjetasRetiradas">12- Tarjetas retiradas por:</string>
    <string name="NroTarjeta">13- N° de Tarjeta:</string>
    <string name="Ubicacion">14- Ubicación:</string>
    <string name="ColocadaPor">15- Colocado por:</string>
    <string name="FechaRetiro">16- Fecha Retiro:</string>
    <string name="Retirada">17- Retirada por:</string>
    <string name="Conciliado">18- Conciliado:</string>
    <string name="AccesoEspacioConfinado">Acceso Espacio Confinados:</string>
    <string name="IdentificacionEspacioConfinado">1- Identificación Espacio Confinado:</string>
    <string name="PTSPermisoAEC">2- PTS/Permiso de AEC/Proc. de entrada y rescate:</string>
    <string name="VigenciaPermisoTrabajo">3- Vigencia del Permiso de Trabajo:</string>
    <string name="IngresoEspacioConfinado">4- Ingresan al Espacio Confinado:</string>
    <string name="VigiasExternos">5- Vigía/s externos:</string>
    <string name="ComprendeVigia">6- Comprende el Vigía sus resp. y tareas relacionadas:</string>
    <string name="PersonalInvolucrado">7- Personal involucrado se encuentra habilitado:</string>
    <string name="CheckListAdicionalesConfinado">8- Son necesarios CheckList adic.:</string>
    <string name="Aislacion">9- Aislación:</string>
    <string name="EquiposElectricos">10- Equipos Eléctricos:</string>
    <string name="LimpiezaVentilacion">11- Limpieza/Ventilación:</string>
    <string name="HerramientasEquipos2">12- Herramientas y equipos:</string>
    <string name="MonitoreoConfinado">13- Monitoreo:</string>
    <string name="Entrada">14- Entrada:</string>
    <string name="Rescate">15- Rescate:</string>
    <string name="FirmasResponsables2">16- Firmas Responsables:</string>
    <string name="ValidezPermiso">1- Validez Permiso:</string>
    <string name="FirmasResponsables">2- Firmas Responsables:</string>
    <string name="SectorTrabajo">3- Sector trabajo:</string>
    <string name="ListadoPersonal">4- Listado Personal:</string>
    <string name="DescripcionTrabajo">5- Descripción trabajo:</string>
    <string name="InspeccionSector">6- Inspección del sector:</string>
    <string name="RiesgosFisicos">7- Riesgos Físicos:</string>
    <string name="RiesgosQuimicos">8- Riesgos Químicos:</string>
    <string name="RiesgosAmbientales">9- Riesgos Medioambientales:</string>
    <string name="EPPAdicional">10- EPP Adicional:</string>
    <string name="Entrenamiento">11- Entrenamiento:</string>
    <string name="Cierre">12- Cierre:</string>
    <string name="TrabajoEnAltura">Trabajo en Altura:</string>
    <string name="PTSCaidas">2- PTS/Análisis de peligro de caída:</string>
    <string name="EPPcaidas">4 -Los EPP para prevención de caídas:</string>
    <string name="HabilitacionEPP">5- Habilitación EPP para trabajo en altura:</string>
    <string name="AndamioHabilitado">6- Andamio habilitado:</string>
    <string name="BarandasCondiciones">7- Barandas en óptimas condiciones:</string>
    <string name="CondicionesEscaleras">8- Condiciones mecánicas Escaleras:</string>
    <string name="EscaleraSujeta">9- La Escalera/Plataforma sujeta y nivelada en su base:</string>
    <string name="SeñalizacionSector2">10- Señalización del sector:</string>
    <string name="OperarioAtado">11- Operario trabaja 100% atado:</string>
    <string name="DenergizacionParaTrabajar">13- Desenergización del equipo a trabajar:</string>
    <string name="ColocacionGuardaCritica">14- Se colocó Guarda Crítica para la vida:</string>
    <string name="GuardaCritica">15- Guarda Crítica para la vida identidicada:</string>
    <string name="TrabajoEnCaliente">Trabajo en Caliente:</string>
    <string name="PTSTrabajoEnCaliente">2- PTS/Certificado Trabajo en Caliente:</string>
    <string name="EPPTrabajoEnCaliente">4- EPP para Trabajo en Caliente:</string>
    <string name="HabilitacionHerramientas">5- Habilitación de herramientas:</string>
    <string name="SeñalizacionSector">6- Señalización del sector:</string>
    <string name="InflamablesFueraPerimetro">7- Inflamables fuera del perímetro:</string>
    <string name="Cañerias">8- Cañerias y Drenajes aislados fuentes Ign.:</string>
    <string name="ObservadorFuego">9- Observador de Fuego presente:</string>
    <string name="EquipoExtinsion">10- Equipo de Extinsión</string>
    <string name="Monitoreo">11- Monitoreo Atm. inflamable:</string>
    <string name="Fecha">Fecha: </string>
</resources>