<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ReportesFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/Site"
                android:textColor="#000000"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinnerSiteReportes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/Sector"
                android:textColor="#000000"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinnerSector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblFecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/Fecha"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/etFechaIncidente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="Fecha del incidente"
                    android:textColorHint="#808080"
                    android:textSize="20sp" />
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblHora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="Hora: "
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etHoraIncidente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="Hora del incidente"
                android:textColorHint="#808080"
                android:textSize="20sp" />
        </LinearLayout>

            <EditText
                android:id="@+id/etLugar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/Lugar"
                android:inputType="textPersonName"
                android:textColorHint="#808080"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/SectorResp"
                android:textColor="#000000"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinnerSectorResponsable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/ResponsableTurno"
                android:textColor="#000000"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinnerResponsable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/etNombreOperario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/NombreOperario"
                android:inputType="textPersonName"
                android:textColorHint="#808080"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etFuncionOperario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/FuncionOp"
                android:inputType="textPersonName"
                android:textColorHint="#808080"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/Personal"
                android:textColor="#000000"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/checkbox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="Efectivo"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkbox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/PermanenteDiscontinuo"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkbox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/Temporario"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkbox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="Contratista Habitual"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkbox5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="Contratista No Habitual"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkbox6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="Chofer"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etEmpresa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/Empresa"
                android:inputType="textPersonName"
                android:textColorHint="#808080"
                android:textSize="20sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/etDescribirOcurrido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/DescribirOcurrido"
                android:inputType="textPersonName"
                android:textColorHint="#808080"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/Potencial"
                android:textColor="#000000"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinnerPotencial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="Clasificacion:"
                android:textColor="#000000"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinnerClasificacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/etLesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/Lesion"
                android:inputType="textPersonName"
                android:textColorHint="#808080"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etParteCuerpoAfectada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/ParteDelCuerpo"
                android:inputType="textPersonName"
                android:textColorHint="#808080"
                android:textSize="20sp" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/buttonFoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:drawableLeft="@android:drawable/ic_menu_camera"
                android:text="@string/capturar"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonElegirFoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:drawableLeft="@android:drawable/ic_menu_search"
                android:text="@string/elegir"
                android:textSize="20sp" />
        </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/imageSwitcher"
                android:visibility="gone">

                <ImageSwitcher
                    android:id="@+id/fotoImageSwitcher"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginBottom="5dp"
                    android:scaleType="fitCenter" />

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="10dp">

                    <Button
                        android:id="@+id/botonAnteriorImageSwitcher"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Ant."
                        android:drawableLeft="@drawable/ic_arrow_left"
                        android:drawableTint="@color/white"
                        android:textSize="14dp" />

                    <Button
                        android:id="@+id/eliminarFoto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Borrar"
                        android:textSize="14dp"
                        android:layout_gravity="center"
                        android:drawableLeft="@drawable/ic_delete"
                        android:drawableTint="@color/white"/>

                    <Button
                        android:id="@+id/botonSiguienteImageSwitcher"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Sig."
                        android:drawableRight="@drawable/ic_arrow_right"
                        android:drawableTint="@color/white"
                        android:textSize="14dp" />
                </LinearLayout>
            </LinearLayout>

            <!-- agregar relatives layout con nombre -->
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/acciones">
            </LinearLayout>

            <Button
                android:id="@+id/buttonAgregar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/BotonAgregar"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonGuardarReportes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/buttonAgregar"
                android:layout_marginBottom="10dp"
                android:text="@string/BotonGuardar"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>