<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <EditText
            android:id="@+id/etAccionReportesOpciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Accion"
            android:inputType="textPersonName"
            android:textSize="20sp"
            android:textColorHint="#808080"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Responsable"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_marginBottom="5dp"/>

        <Spinner
            android:id="@+id/spinnerResponsableReportesOpciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/siguimiento"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textColor="#000000"/>

        <Spinner
            android:id="@+id/spinnerSeguimientoReportesOpciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>